// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField CheckboxField render additional props 1`] = `
<Field
  className="stx-checkbox-field__field"
  messageId="stxFieldMessage18"
>
  <div
    className="stx-checkbox-field__div"
  >
    <Checkbox
      aria-describedby="stxFieldMessage18"
      className="stx-checkbox-field__checkbox"
      data-additional-prop="additional-prop"
      id="stxField17"
    />
    <label
      className="stx-checkbox-field__label"
      htmlFor="stxField17"
    />
  </div>
</Field>
`;

exports[`CheckboxField CheckboxField render disabled when disabled is true 1`] = `
<Field
  className="stx-checkbox-field__field"
  messageId="stxFieldMessage16"
>
  <div
    className="stx-checkbox-field__div"
  >
    <Checkbox
      aria-describedby="stxFieldMessage16"
      className="stx-checkbox-field__checkbox"
      disabled={true}
      id="stxField15"
    />
    <label
      className="stx-checkbox-field__label"
      htmlFor="stxField15"
    />
  </div>
</Field>
`;

exports[`CheckboxField CheckboxField renders checked 1`] = `
<Field
  className="stx-checkbox-field__field"
  messageId="stxFieldMessage6"
>
  <div
    className="stx-checkbox-field__div"
  >
    <Checkbox
      aria-describedby="stxFieldMessage6"
      checked={true}
      className="stx-checkbox-field__checkbox"
      id="stxField5"
    />
    <label
      className="stx-checkbox-field__label"
      htmlFor="stxField5"
    />
  </div>
</Field>
`;

exports[`CheckboxField CheckboxField renders with a success messageText 1`] = `
<Field
  className="stx-checkbox-field__field"
  messageId="stxFieldMessage10"
  messageText="message-text"
  messageType="success"
>
  <div
    className="stx-checkbox-field__div"
  >
    <Checkbox
      aria-describedby="stxFieldMessage10"
      className="stx-checkbox-field__checkbox"
      id="stxField9"
    />
    <label
      className="stx-checkbox-field__label"
      htmlFor="stxField9"
    />
  </div>
</Field>
`;

exports[`CheckboxField CheckboxField renders with a warning messageText 1`] = `
<Field
  className="stx-checkbox-field__field"
  messageId="stxFieldMessage12"
  messageText="message-text"
  messageType="warning"
>
  <div
    className="stx-checkbox-field__div"
  >
    <Checkbox
      aria-describedby="stxFieldMessage12"
      className="stx-checkbox-field__checkbox"
      id="stxField11"
    />
    <label
      className="stx-checkbox-field__label"
      htmlFor="stxField11"
    />
  </div>
</Field>
`;

exports[`CheckboxField CheckboxField renders with an alert messageText 1`] = `
<Field
  className="stx-checkbox-field__field"
  messageId="stxFieldMessage14"
  messageText="message-text"
  messageType="alert"
>
  <div
    className="stx-checkbox-field__div"
  >
    <Checkbox
      aria-describedby="stxFieldMessage14"
      aria-invalid="true"
      className="stx-checkbox-field__checkbox"
      id="stxField13"
    />
    <label
      className="stx-checkbox-field__label"
      htmlFor="stxField13"
    />
  </div>
</Field>
`;

exports[`CheckboxField CheckboxField renders with basic props 1`] = `
<Field
  className="stx-checkbox-field__field html-class"
  messageId="stxFieldMessage2"
>
  <div
    className="stx-checkbox-field__div"
  >
    <Checkbox
      aria-describedby="stxFieldMessage2"
      className="stx-checkbox-field__checkbox"
      id="test-id"
      name="name"
      onChange={[Function]}
      onClick={[Function]}
      value="test-string"
    />
    <label
      className="stx-checkbox-field__label"
      htmlFor="test-id"
    >
      checkboxfield-label
    </label>
  </div>
</Field>
`;

exports[`CheckboxField CheckboxField renders with helpText 1`] = `
<Field
  className="stx-checkbox-field__field"
  helpText="help-text"
  messageId="stxFieldMessage8"
>
  <div
    className="stx-checkbox-field__div"
  >
    <Checkbox
      aria-describedby="stxFieldMessage8"
      className="stx-checkbox-field__checkbox"
      id="stxField7"
    />
    <label
      className="stx-checkbox-field__label"
      htmlFor="stxField7"
    />
  </div>
</Field>
`;

exports[`CheckboxField CheckboxField renders without any props 1`] = `
<Field
  className="stx-checkbox-field__field"
  messageId="stxFieldMessage4"
>
  <div
    className="stx-checkbox-field__div"
  >
    <Checkbox
      aria-describedby="stxFieldMessage4"
      className="stx-checkbox-field__checkbox"
      id="stxField3"
    />
    <label
      className="stx-checkbox-field__label"
      htmlFor="stxField3"
    />
  </div>
</Field>
`;
